Implement visual elements and interactive components

--- a/fund-leaders/business-value.mdx
+++ b/fund-leaders/business-value.mdx
@@ -32,6 +32,10 @@ Amos delivers measurable business value through operational efficiency, strategi
   </Card>
 </CardGroup>
 
+import { MetricCard } from '../components/MetricCard.mdx'
+
+<MetricCard />
+
 ## Comprehensive ROI Framework
 
 ### Direct Cost Savings
@@ -147,6 +151,10 @@ Amos delivers measurable business value through operational efficiency, strategi
 - **Exit Flexibility**: Standard tooling and open formats ensure smooth transitions if needs change
 
 ## Cost-Benefit Analysis Framework
+
+import { ROICalculator } from '../components/ROICalculator.mdx'
+
+<ROICalculator />
 
 ### Investment Components
 
