--- a/fund-leaders/implementation/getting-started.mdx
+++ b/fund-leaders/implementation/getting-started.mdx
@@ -106,6 +106,10 @@ A well-designed pilot project reduces risk while demonstrating value and buildin
 
 ### Pilot Planning Template
 
+import { TimelineRoadmap } from '../../components/TimelineRoadmap.mdx'
+
+<TimelineRoadmap />
+
 **Phase 1: Setup (Weeks 1-2)**
 - Technical infrastructure deployment
 - Initial data source connections
