--- a/fund-leaders/implementation/index.mdx
+++ b/fund-leaders/implementation/index.mdx
@@ -93,6 +93,10 @@ Our implementation approach recognizes that successful data platform adoption re
 
 ## Implementation Roadmap
 
+import { TimelineRoadmap } from '../../components/TimelineRoadmap.mdx'
+
+<TimelineRoadmap />
+
 ```mermaid
 gantt
     title Amos Implementation Roadmap
