--- a/fund-leaders/integration/deployment-options.mdx
+++ b/fund-leaders/integration/deployment-options.mdx
@@ -9,6 +9,12 @@ description: "Choose the right deployment model for your fund's security and ope
 
 Amos offers flexible deployment options to meet diverse security, compliance, and operational requirements. Each approach provides the same core functionality with different infrastructure and control models.
 
+## Deployment Architecture Options
+
+import { IntegrationDiagrams } from '../../components/IntegrationDiagrams.mdx'
+
+<IntegrationDiagrams />
+
 ## Deployment Models
 
 ### Cloud-Native (SaaS)
