--- a/fund-leaders/integration/index.mdx
+++ b/fund-leaders/integration/index.mdx
@@ -11,20 +11,9 @@ Amos is designed to complement and enhance your existing technology infrastructu
 
 ## High-Level Architecture
 
-```mermaid
-graph TB
-    A[Fund Administration Systems] --> D[Amos Data Platform]
-    B[Portfolio Management Systems] --> D
-    C[CRM & Deal Management] --> D
-    E[Accounting Systems] --> D
-    
-    D --> F[Executive Dashboards]
-    D --> G[Investor Reporting]
-    D --> H[Regulatory Filings]
-    D --> I[Analytics & Insights]
-    
-    style D fill:#16A34A,stroke:#333,stroke-width:3px,color:#fff
-```
+import { IntegrationDiagrams } from '../../components/IntegrationDiagrams.mdx'
+
+<IntegrationDiagrams />
 
 ## Integration Benefits
 
