--- a/fund-leaders/business-value.mdx
+++ b/fund-leaders/business-value.mdx
@@ -3,8 +3,6 @@ title: "Business Value & ROI"
 description: "Comprehensive ROI frameworks, cost-benefit analysis, and strategic positioning advantages of Amos including open source and AI-linked benefits"
 ---
 
-# Business Value & ROI
-
 ## Executive Summary
 
 Amos delivers measurable business value through operational efficiency, strategic control, risk reduction, and AI enablement. Our open architecture ensures you capture value while maintaining complete control and future optionality.
@@ -21,10 +19,10 @@ Amos delivers measurable business value through operational efficiency, strategi
   <Card title="50% Cost Reduction" icon="dollar-sign">
     Lower operational costs while maintaining full control and transparency
   </Card>
-  <Card title="60% Faster AI Delivery" icon="brain">
+  <Card title="60% Faster AI Delivery" icon="zap">
     Accelerated AI initiatives through unified, governed data foundation
   </Card>
-  <Card title="Zero Lock-in Risk" icon="unlock">
+  <Card title="Zero Lock-in Risk" icon="key">
     Complete strategic control with self-hosting and reversible deployment
   </Card>
   <Card title="100% Audit Ready" icon="shield-check">
@@ -44,7 +42,7 @@ import { MetricCard } from '../components/MetricCard.mdx'
   <Card title="Operational Efficiency" icon="cog">
     **$500K-2M annual savings** through automated reporting, reconciliation, and workflow optimization
   </Card>
-  <Card title="Technology Consolidation" icon="server">
+  <Card title="Technology Consolidation" icon="building">
     **30-50% reduction** in data infrastructure costs through unified platform approach
   </Card>
 </CardGroup>
@@ -58,7 +56,7 @@ import { MetricCard } from '../components/MetricCard.mdx'
 ### Revenue Enhancement & Strategic Value
 
 <CardGroup cols={2}>
-  <Card title="Faster Decision Making" icon="lightning">
+  <Card title="Faster Decision Making" icon="zap">
     **2-3 weeks faster** deal execution through real-time data insights and automated due diligence
   </Card>
   <Card title="Enhanced Fundraising" icon="trending-up">
@@ -85,10 +83,10 @@ import { MetricCard } from '../components/MetricCard.mdx'
   <Card title="L0 → L3 Progression" icon="stairs">
     Transform from fragmented data to AI-ready feature stores in 6-12 months
   </Card>
-  <Card title="AI Cycle Time" icon="refresh">
+  <Card title="AI Cycle Time" icon="clock">
     **60% faster** AI project delivery through unified, governed data foundation
   </Card>
-  <Card title="Decision Support ROI" icon="brain">
+  <Card title="Decision Support ROI" icon="chart-line">
     **25-40% improvement** in investment decision quality through AI-enhanced analytics
   </Card>
 </CardGroup>
@@ -103,13 +101,13 @@ import { MetricCard } from '../components/MetricCard.mdx'
 ### Realizing Value Through Open Adoption
 
 <CardGroup cols={2}>
-  <Card title="Strategic Independence" icon="compass">
+  <Card title="Strategic Independence" icon="shield">
     **Complete control** over your data platform with no vendor dependencies or lock-in risks
   </Card>
   <Card title="Transparent Operations" icon="eye">
     **Full auditability** with version-controlled configs and end-to-end lineage for regulatory confidence
   </Card>
-  <Card title="Future Flexibility" icon="arrows-alt">
+  <Card title="Future Flexibility" icon="rotate-reverse">
     **Reversible deployment** and standard tooling ensure you can adapt as needs evolve
   </Card>
   <Card title="Innovation Control" icon="rocket">
@@ -120,10 +118,10 @@ import { MetricCard } from '../components/MetricCard.mdx'
 ### Competitive Advantage Framework
 
 <CardGroup cols={3}>
-  <Card title="Superior Reporting" icon="chart-bar">
+  <Card title="Superior Reporting" icon="chart-line">
     **Real-time dashboards** and automated investor reports that exceed industry standards
   </Card>
-  <Card title="Market Responsiveness" icon="bolt">
+  <Card title="Market Responsiveness" icon="zap">
     **Faster deal execution** through instant access to portfolio insights and market data
   </Card>
   <Card title="Due Diligence Excellence" icon="search">
@@ -162,7 +160,7 @@ import { ROICalculator } from '../components/ROICalculator.mdx'
   <Card title="Implementation Costs" icon="dollar-sign">
     **$150K-500K** initial setup including data migration, system integration, and team training
   </Card>
-  <Card title="Ongoing Operations" icon="refresh">
+  <Card title="Ongoing Operations" icon="clock">
     **$50K-150K annually** for hosting, maintenance, and continuous improvement (significantly lower than proprietary alternatives)
   </Card>
 </CardGroup>
@@ -205,16 +203,16 @@ import { ROICalculator } from '../components/ROICalculator.mdx'
 ## Next Steps for Fund Leaders
 
 <CardGroup cols={2}>
-  <Card title="ROI Assessment" icon="calculator" href="/fund-leaders/implementation/getting-started">
+  <Card title="ROI Assessment" icon="chart-line" href="/fund-leaders/implementation/getting-started">
     Get a customized ROI analysis and readiness assessment for your fund
   </Card>
   <Card title="Use Case Examples" icon="building" href="/fund-leaders/use-cases">
     Explore specific scenarios and outcomes for your fund type
   </Card>
-  <Card title="Implementation Planning" icon="map" href="/fund-leaders/implementation">
+  <Card title="Implementation Planning" icon="calendar" href="/fund-leaders/implementation">
     Understand timelines, resources, and change management approach
   </Card>
-  <Card title="Open Source Benefits" icon="unlock" href="/fund-leaders/integration">
+  <Card title="Open Source Benefits" icon="key" href="/fund-leaders/integration">
     Learn about strategic control and vendor lock-in prevention
   </Card>
 </CardGroup>
