--- a/fund-leaders/change-management/adoption-metrics.mdx
+++ b/fund-leaders/change-management/adoption-metrics.mdx
@@ -3,8 +3,6 @@ title: "Adoption Metrics & Success Measurement"
 description: "Comprehensive framework for measuring transformation success through automation rates, data accuracy, cycle times, and organizational adoption indicators"
 ---
 
-# Adoption Metrics & Success Measurement
-
 ## Overview
 
 Measuring transformation success requires a comprehensive framework that tracks technical performance, organizational adoption, and business value realization. This guide provides the metrics, tools, and templates needed to monitor your Amos implementation progress and ensure sustainable success.
@@ -30,7 +28,7 @@ What gets measured gets managed. Effective metrics provide early warning signals
     **Measurement Frequency:** Weekly tracking with monthly analysis
   </Card>
   
-  <Card title="Process Efficiency" icon="cogs">
+  <Card title="Process Efficiency" icon="cog">
     **Focus:** Automation rates, cycle times, and operational improvements
     **Key Metrics:** Manual task reduction, reporting speed, error elimination
     **Measurement Frequency:** Monthly measurement with quarterly reviews
@@ -349,7 +347,7 @@ What gets measured gets managed. Effective metrics provide early warning signals
 
 ### Operational Dashboard
 
-<Card title="Operational Performance Dashboard" icon="cogs">
+<Card title="Operational Performance Dashboard" icon="cog">
 **Purpose:** Monitor day-to-day operational metrics and process efficiency
 
 **Key Widgets:**
