--- a/fund-leaders/change-management/index.mdx
+++ b/fund-leaders/change-management/index.mdx
@@ -3,10 +3,6 @@ title: "Change Management & Adoption Framework"
 description: "Transform your fund's data operations through structured organizational change using the Adapt → Align → Upgrade methodology"
 ---
 
-# Change Management & Adoption Framework
-
-## Why Change Management Matters in Fund Operations
-
 Fund operations are built on precision, compliance, and trust. When implementing a unified data platform like Amos, success depends not just on technical integration, but on how well your organization adapts to new processes, aligns stakeholders around common goals, and upgrades operational capabilities.
 
 <Card title="The Cost of Poor Change Management" icon="warning">
@@ -150,7 +146,7 @@ Different stakeholders have different needs and concerns:
     **Success Metrics:** Faster due diligence, better portfolio monitoring, improved returns
   </Card>
   
-  <Card title="Operations Team" icon="cogs">
+  <Card title="Operations Team" icon="cog">
     **Primary Concerns:** Process efficiency, compliance, reporting accuracy
     **Success Metrics:** Reduced manual work, faster reporting cycles, fewer errors
   </Card>
