--- a/fund-leaders/change-management/roles-responsibilities.mdx
+++ b/fund-leaders/change-management/roles-responsibilities.mdx
@@ -3,8 +3,6 @@ title: "Roles & Responsibilities"
 description: "Comprehensive guide to stakeholder roles, responsibilities, and engagement frameworks for successful Amos implementation"
 ---
 
-# Roles & Responsibilities
-
 ## Executive Summary
 
 Successful data platform transformation requires clear role definition, accountability frameworks, and structured stakeholder engagement. This guide outlines the key roles, responsibilities, and engagement patterns needed to ensure your Amos implementation delivers maximum value with minimal organizational disruption.
@@ -307,14 +305,14 @@ Fund operations involve multiple stakeholders with different priorities, timelin
 ### Communication Patterns and Cadence
 
 <CardGroup cols={2}>
-  <Card title="Executive Steering Committee" icon="crown">
+  <Card title="Executive Steering Committee" icon="users">
     **Participants:** COO, CFO, CIO, Project Lead
     **Frequency:** Bi-weekly during implementation, monthly during operations
     **Duration:** 60 minutes
     **Agenda:** Progress review, issue escalation, strategic decisions, resource allocation
   </Card>
   
-  <Card title="Operational Working Group" icon="cogs">
+  <Card title="Operational Working Group" icon="cog">
     **Participants:** Ops, Compliance, IR, Data Owner, Business Analyst
     **Frequency:** Weekly during implementation, bi-weekly during operations
     **Duration:** 90 minutes
@@ -484,7 +482,7 @@ gantt
 ### Operational Leadership Metrics
 
 <CardGroup cols={2}>
-  <Card title="Process Excellence" icon="cogs">
+  <Card title="Process Excellence" icon="cog">
     - Process cycle time reductions
     - Error rate improvements
     - Automation adoption rates
@@ -502,7 +500,7 @@ gantt
 ### Technical Team Metrics
 
 <CardGroup cols={2}>
-  <Card title="System Performance" icon="server">
+  <Card title="System Performance" icon="chart-line">
     - System uptime and availability
     - Performance benchmark achievement
     - Integration success rates
