--- a/fund-leaders/implementation/change-management.mdx
+++ b/fund-leaders/implementation/change-management.mdx
@@ -3,8 +3,6 @@ title: "Change Management & Organizational Transformation"
 description: "Comprehensive guide to managing organizational impact, stakeholder buy-in, and successful adoption of Amos platform transformation"
 ---
 
-# Change Management & Organizational Transformation
-
 Implementing Amos represents a fundamental transformation in how your fund operates—from data collection and analysis to decision-making and stakeholder communication. Success requires more than technical implementation; it demands thoughtful organizational change management that addresses people, processes, and culture.
 
 ## Understanding Organizational Impact
@@ -188,7 +186,7 @@ Implementing Amos represents a fundamental transformation in how your fund opera
     
     **Channels**: All-hands meetings, executive memos, town halls
   </Card>
-  <Card title="Operational Updates" icon="cogs">
+  <Card title="Operational Updates" icon="cog">
     **Frequency**: Weekly
     
     **Audience**: Implementation team and department heads
@@ -440,7 +438,7 @@ Implementing Amos represents a fundamental transformation in how your fund opera
     
     **Level 5**: Continuous innovation and competitive advantage
   </Card>
-  <Card title="Organizational Evolution" icon="seedling">
+  <Card title="Organizational Evolution" icon="trending-up">
     **Year 1**: Foundation establishment and basic adoption
     
     **Year 2**: Process optimization and efficiency realization
