--- a/fund-leaders/implementation/getting-started.mdx
+++ b/fund-leaders/implementation/getting-started.mdx
@@ -3,8 +3,6 @@ title: "Getting Started & Assessment"
 description: "Comprehensive assessment framework, pilot project guidance, and vendor evaluation tools for fund leaders beginning their Amos journey"
 ---
 
-# Getting Started & Assessment
-
 Your journey to data-driven fund operations begins with proper assessment and planning. This guide provides the frameworks and tools needed to evaluate your readiness, plan a successful pilot, and make informed vendor decisions.
 
 ## Implementation Readiness Assessment
@@ -333,7 +331,7 @@ Answer these key questions to gauge your immediate readiness:
 </CardGroup>
 
 <CardGroup cols={2}>
-  <Card title="Conduct Vendor Evaluation" icon="balance-scale">
+  <Card title="Conduct Vendor Evaluation" icon="chart-line">
     Use our comprehensive framework to objectively assess Amos against alternatives
   </Card>
   <Card title="Schedule Assessment Consultation" icon="calendar" href="mailto:assessment@amos.com">
