--- a/fund-leaders/implementation/team-requirements.mdx
+++ b/fund-leaders/implementation/team-requirements.mdx
@@ -3,8 +3,6 @@ title: "Team Requirements & Skills"
 description: "Essential roles, skills, and organizational structure needed for successful Amos implementation and ongoing operations"
 ---
 
-# Team Requirements & Skills
-
 Building the right team is critical for successful Amos implementation and long-term value realization. This guide outlines the necessary roles, skills, and organizational structure to ensure your implementation succeeds and your team is prepared for ongoing operations.
 
 ## Core Implementation Team
@@ -13,7 +11,7 @@ Building the right team is critical for successful Amos implementation and long-
 **Time Commitment**: 2-4 hours/week | **Duration**: Full project lifecycle
 
 <CardGroup cols={2}>
-  <Card title="Primary Responsibilities" icon="crown">
+  <Card title="Primary Responsibilities" icon="users">
     - Strategic vision and success criteria definition
     - Resource allocation and budget approval
     - Organizational change advocacy and communication
