--- a/fund-leaders/index.mdx
+++ b/fund-leaders/index.mdx
@@ -3,8 +3,6 @@ title: "Executive Overview"
 description: "Transform your fund operations with Amos - the open, auditable data platform that delivers operational excellence while ensuring control and AI readiness"
 ---
 
-# Executive Overview
-
 Welcome to Amos - the comprehensive data platform designed specifically for fund leaders who demand operational excellence, strategic control, and future-ready capabilities. Amos transforms fund operations through our proven **"Adapt → Align → Upgrade"** methodology while maintaining complete transparency and eliminating vendor lock-in.
 
 ## Transformational Value Propositions
@@ -63,7 +61,7 @@ This methodology ensures successful transformation while maintaining operational
 ## Open Source Assurance & Strategic Control
 
 <CardGroup cols={2}>
-  <Card title="No Vendor Lock-in" icon="unlock">
+  <Card title="No Vendor Lock-in" icon="key">
     Self-host with standard tooling, retain complete data custody, and maintain reversible deployment options
   </Card>
   <Card title="Full Auditability" icon="search">
