--- a/fund-leaders/integration/existing-systems.mdx
+++ b/fund-leaders/integration/existing-systems.mdx
@@ -3,8 +3,6 @@ title: "Existing Systems Compatibility"
 description: "Comprehensive overview of supported systems and integration approaches"
 ---
 
-# Existing Systems Compatibility
-
 ## Supported System Categories
 
 Amos integrates with a wide range of fund management systems, providing flexible connectivity options for diverse technology environments.
@@ -52,7 +50,7 @@ Amos integrates with a wide range of fund management systems, providing flexible
   <Card title="Affinity" icon="users">
     Relationship and pipeline management
   </Card>
-  <Card title="4Degrees" icon="network-wired">
+  <Card title="4Degrees" icon="globe">
     Network-based relationship tracking
   </Card>
 </CardGroup>
