--- a/fund-leaders/use-cases/hedge-funds.mdx
+++ b/fund-leaders/use-cases/hedge-funds.mdx
@@ -3,26 +3,24 @@ title: "Hedge Fund Use Cases"
 description: "Optimize hedge fund operations with real-time risk management, automated performance attribution, and comprehensive regulatory reporting."
 ---
 
-# Hedge Fund Use Cases
-
 Hedge funds operate in highly regulated environments where real-time risk management, precise performance attribution, and comprehensive regulatory reporting are critical to success. Amos transforms hedge fund operations by providing unified data infrastructure that supports sophisticated analytics while maintaining the compliance and audit capabilities that regulators require.
 
 ## Key Hedge Fund Operational Challenges
 
 <CardGroup cols={2}>
-  <Card title="Risk Management" icon="shield-alert">
+  <Card title="Risk Management" icon="shield">
     Real-time monitoring of portfolio risk across multiple strategies, asset classes, and geographic regions with regulatory compliance.
   </Card>
   
-  <Card title="Performance Attribution" icon="chart-pie">
+  <Card title="Performance Attribution" icon="chart-line">
     Precise calculation of returns by strategy, sector, and security with daily reconciliation and investor-level reporting.
   </Card>
   
-  <Card title="Regulatory Reporting" icon="file-shield">
+  <Card title="Regulatory Reporting" icon="file-text">
     Complex regulatory requirements including Form PF, CFTC reporting, and prime broker reconciliation with audit trails.
   </Card>
   
-  <Card title="Operational Efficiency" icon="cogs">
+  <Card title="Operational Efficiency" icon="cog">
     Streamlining trade settlement, NAV calculation, and investor communications while maintaining operational resilience.
   </Card>
 </CardGroup>
@@ -72,7 +70,7 @@ graph LR
     **95% faster** risk alert response from hours to minutes
   </Card>
   
-  <Card title="Regulatory Compliance" icon="check-shield">
+  <Card title="Regulatory Compliance" icon="shield-check">
     **100% compliance** with real-time risk monitoring requirements
   </Card>
 </CardGroup>
@@ -144,7 +142,7 @@ A systematic trading fund faced increasing regulatory complexity with Form PF, C
     - Complete audit trail documentation
   </Card>
   
-  <Card title="Continuous Monitoring" icon="radar">
+  <Card title="Continuous Monitoring" icon="eye">
     - Real-time compliance monitoring
     - Automated exception alerts
     - Regulatory change tracking
@@ -292,7 +290,7 @@ graph LR
 Learn from hedge funds that have transformed their operations:
 
 <CardGroup cols={2}>
-  <Card title="Multi-Strategy Fund" icon="layers" href="/fund-leaders/success-stories/case-study-1">
+  <Card title="Multi-Strategy Fund" icon="building" href="/fund-leaders/success-stories/case-study-1">
     $2B fund achieved 95% automation in risk management and regulatory reporting.
   </Card>
   
