--- a/fund-leaders/use-cases/private-equity.mdx
+++ b/fund-leaders/use-cases/private-equity.mdx
@@ -3,8 +3,6 @@ title: "Private Equity Use Cases"
 description: "Transform PE operations with automated deal sourcing, streamlined due diligence, and comprehensive portfolio monitoring."
 ---
 
-# Private Equity Use Cases
-
 Private equity funds face unique operational challenges around deal execution, portfolio company management, and LP reporting. Amos transforms these operations through intelligent automation while maintaining the control and auditability that PE funds require.
 
 ## Key PE Operational Challenges
@@ -14,7 +12,7 @@ Private equity funds face unique operational challenges around deal execution, p
     Tracking opportunities across multiple sources, managing due diligence processes, and coordinating deal team activities.
   </Card>
   
-  <Card title="Portfolio Monitoring" icon="chart-mixed">
+  <Card title="Portfolio Monitoring" icon="chart-line">
     Consolidating portfolio company data, tracking KPIs, and identifying value creation opportunities across investments.
   </Card>
   
