--- a/fund-leaders/use-cases/venture-capital.mdx
+++ b/fund-leaders/use-cases/venture-capital.mdx
@@ -3,8 +3,6 @@ title: "Venture Capital Use Cases"
 description: "Accelerate VC operations with automated portfolio management, real-time startup tracking, and streamlined investor reporting."
 ---
 
-# Venture Capital Use Cases
-
 Venture capital funds operate in fast-moving markets where speed and agility are competitive advantages. Amos transforms VC operations by automating portfolio management, enabling real-time startup tracking, and streamlining investor communications while maintaining the flexibility that VC funds need.
 
 ## Key VC Operational Challenges
@@ -268,7 +266,7 @@ A late-stage VC fund needed better visibility into exit readiness across portfol
 Discover how VC funds are transforming their operations:
 
 <CardGroup cols={2}>
-  <Card title="Series A Fund" icon="seedling" href="/fund-leaders/success-stories/case-study-1">
+  <Card title="Series A Fund" icon="rocket" href="/fund-leaders/success-stories/case-study-1">
     $200M fund improved portfolio visibility across 60+ companies and reduced board prep time by 85%.
   </Card>
   
