Intro page and navigation restructure

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,97 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "AMOS Data Platform"
+description: "Unified data infrastructure for modern fund operations"
 ---
 
-## Setting up
+import { Card, Cards } from 'nextra/components'
 
-Get your documentation site up and running in minutes.
+AMOS is an open-source data platform designed specifically for fund operations, providing the unified data infrastructure that modern investment funds need to operate efficiently and make data-driven decisions.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## About This Documentation
 
-## Make it yours
+This documentation is organized into two complementary sections that reflect our vision of data transformation projects as comprehensive change management initiatives, not just technical implementations:
 
-Design a docs site that looks great and empowers your users.
+**Business Documentation**: Strategic guidance, implementation methodologies, and change management frameworks for fund leaders and decision-makers. This section covers the business case, use cases, and proven approaches for successful data transformation.
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+**Technical Documentation**: API references, integration guides, and technical specifications for developers and technical teams implementing AMOS.
+
+Our approach recognizes that successful data transformation requires both technical excellence and organizational change management. Both our platform and our methodology are open source—we believe in transparency not just in code, but in sharing the proven practices that make data projects successful.
+
+## Why AMOS?
+
+Investment funds face unique data challenges: fragmented systems, inconsistent definitions, manual processes, and the need for real-time insights across portfolio companies, investors, and market conditions. AMOS solves these challenges by creating a single source of truth for all fund-related data.
+
+<Cards>
+  <Card title="Unified Data Layer" icon="🔗">
+    Consolidate data from fund administration, portfolio management, CRM, and market data sources into a single, queryable platform.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  
+  <Card title="Open Source Flexibility" icon="🔓">
+    Deploy on your infrastructure with full control over your data, customizations, and integrations. No vendor lock-in.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  
+  <Card title="Fund-Specific Models" icon="📊">
+    Purpose-built data models for fund operations including LP management, portfolio tracking, and performance reporting.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  
+  <Card title="AI-Ready Foundation" icon="🤖">
+    Clean, governed data that enables AI applications for due diligence, portfolio optimization, and operational efficiency.
   </Card>
-</Columns>
+</Cards>
 
-## Create beautiful pages
+## Get Started
 
-Everything you need to create world-class documentation.
+Explore how AMOS can transform your fund operations:
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+<Cards>
+  <Card title="Executive Overview" icon="👔" href="/fund-leaders">
+    Understand the business value and strategic benefits of unified data infrastructure for fund operations.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  
+  <Card title="Use Cases" icon="💼" href="/fund-leaders/use-cases">
+    See how different fund types leverage AMOS for operational efficiency and better decision-making.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
+  
+  <Card title="Implementation Guide" icon="🚀" href="/fund-leaders/implementation">
+    Learn how to plan and execute your AMOS implementation with proven methodologies and best practices.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+  
+  <Card title="AI Readiness" icon="🧠" href="/fund-leaders/ai-readiness">
+    Discover how AMOS creates the data foundation necessary for successful AI initiatives in fund operations.
   </Card>
-</Columns>
+</Cards>
 
-## Need inspiration?
+## Key Benefits
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+**For Fund Operations**:
+- Reduce reporting cycles from weeks to days
+- Eliminate manual data gathering and reconciliation
+- Ensure data consistency across all systems and reports
+
+**For Investment Teams**:
+- Access real-time portfolio performance and risk metrics
+- Enable data-driven investment decision-making
+- Streamline due diligence with comprehensive data analysis
+
+**For Fund Leadership**:
+- Gain complete visibility into fund performance and operations
+- Make strategic decisions based on accurate, timely data
+- Prepare for regulatory requirements and investor reporting
+
+## Open Source Advantage
+
+AMOS is built on open-source principles that extend beyond just the technical platform:
+
+**Open Platform**:
+- **No Vendor Lock-in**: Deploy on your preferred infrastructure
+- **Full Customization**: Adapt the platform to your specific needs
+- **Transparent Operations**: Complete visibility into how your data is processed
+
+**Open Methodology**:
+- **Proven Frameworks**: Access to battle-tested change management and implementation methodologies
+- **Transparent Practices**: Complete documentation of approaches that work in real fund environments
+- **Community Knowledge**: Benefit from shared experiences and best practices across the fund management industry
+
+We believe that successful data transformation requires both excellent technology and proven methodology. By making both open source, we enable funds to build on the collective knowledge of the industry rather than starting from scratch.
+
+Ready to transform your fund's data operations? Start with our executive overview to understand how AMOS can deliver immediate value for your organization.
