Fix parsing error in hedge funds page

--- a/fund-leaders/use-cases/hedge-funds.mdx
+++ b/fund-leaders/use-cases/hedge-funds.mdx
@@ -3,6 +3,8 @@ title: "Hedge Fund Use Cases"
 description: "Optimize hedge fund operations with real-time risk management, automated performance attribution, and comprehensive regulatory reporting."
 ---
 
+import { Card, CardGroup } from '../nextra/components'
+
 Hedge funds operate in highly regulated environments where real-time risk management, precise performance attribution, and comprehensive regulatory reporting are critical to success. Amos transforms hedge fund operations by providing unified data infrastructure that supports sophisticated analytics while maintaining the compliance and audit capabilities that regulators require.
 
 ## Key Hedge Fund Operational Challenges
@@ -198,7 +200,7 @@ graph LR
 |---------|-------------|------------|-------------|
 | **NAV Calculation** | 3-4 hours daily | 30 minutes | 85% reduction |
 | **Investor Statements** | Weekly manual | Daily automated | 7x frequency |
-| **Operational Errors** | 2-3 per month | <1 per quarter | 90% reduction |
+| **Operational Errors** | 2-3 per month | < 1 per quarter | 90% reduction |
 | **Scalability** | Limited by manual processes | Unlimited automation | Infinite scaling |
 
 ## Hedge Fund-Specific Amos Features
