Fix roles and responsibilities page

--- a/fund-leaders/change-management/roles-responsibilities.mdx
+++ b/fund-leaders/change-management/roles-responsibilities.mdx
@@ -20,7 +20,7 @@ Fund operations involve multiple stakeholders with different priorities, timelin
     **Primary Accountability:** Overall transformation success and operational excellence
     
     **Key Responsibilities:**
-    - Provide executive sponsorship and strategic direction
+    - Provide executive sponsorship and strategic direction 
     - Allocate resources and remove organizational obstacles
     - Champion change management and culture transformation
     - Ensure alignment with business objectives and priorities
@@ -193,7 +193,7 @@ Fund operations involve multiple stakeholders with different priorities, timelin
     **Success Metrics:**
     - Data quality score achievement (>95%)
     - Data governance policy compliance (100%)
-    - Data access request resolution time (<24 hours)
+    - Data access request resolution time (< 24 hours)
     - Data lineage documentation completeness (100%)
     
     **Daily Activities:**
@@ -252,7 +252,7 @@ Fund operations involve multiple stakeholders with different priorities, timelin
     - Requirements completeness and accuracy (>95%)
     - Stakeholder satisfaction with solutions (>85%)
     - Process improvement identification and implementation
-    - Change request resolution time (<5 days)
+    - Change request resolution time (< 5 days)
     
     **Daily Activities:**
     - Conduct stakeholder interviews and workshops
@@ -526,82 +526,8 @@ gantt
 | **Technical Teams** | System status, integration progress, technical issues | Daily | Stand-ups, technical dashboards | IT Lead |
 | **End Users** | Training announcements, system changes, tips & tricks | As needed | Email, intranet, training sessions | Training Lead |
 
-### Communication Templates
-
-<Accordion>
-  <AccordionItem title="Executive Status Report Template">
-    **Subject:** Amos Implementation - Executive Update [Week X]
-    
-    **Executive Summary:**
-    - Overall project health: [Green/Yellow/Red]
-    - Key accomplishments this period
-    - Critical issues requiring attention
-    - Upcoming milestones and decisions needed
-    
-    **Progress Metrics:**
-    - Timeline adherence: [X% complete]
-    - Budget utilization: [X% of approved budget]
-    - Stakeholder satisfaction: [X/10 average score]
-    - Risk mitigation status: [X open risks]
-    
-    **Key Decisions Required:**
-    - [Decision 1 with deadline]
-    - [Decision 2 with deadline]
-    
-    **Next Period Focus:**
-    - [Priority 1]
-    - [Priority 2]
-  </AccordionItem>
-  
-  <AccordionItem title="Team Communication Template">
-    **Subject:** Amos Update - [Team Name] [Date]
-    
-    **This Week's Highlights:**
-    - [Achievement 1]
-    - [Achievement 2]
-    - [Challenge addressed]
-    
-    **Upcoming Activities:**
-    - [Activity 1 with date]
-    - [Activity 2 with date]
-    - [Training session with details]
-    
-    **Action Items:**
-    - [Action item 1 - Owner - Due date]
-    - [Action item 2 - Owner - Due date]
-    
-    **Questions or Concerns:**
-    - Contact [Name] for [specific issues]
-    - Escalate to [Manager] for [decision items]
-  </AccordionItem>
-  
-  <AccordionItem title="Change Announcement Template">
-    **Subject:** Important Update: [Change Description]
-    
-    **What's Changing:**
-    - [Clear description of the change]
-    - [Why this change is being made]
-    - [Benefits to users and organization]
-    
-    **When:**
-    - Effective date: [Date]
-    - Training available: [Dates and times]
-    - Support available: [Contact information]
-    
-    **What You Need to Do:**
-    - [Action 1 with deadline]
-    - [Action 2 with deadline]
-    - [Training requirement if applicable]
-    
-    **Getting Help:**
-    - Questions: [Contact information]
-    - Training: [Schedule and registration]
-    - Technical support: [Contact information]
-  </AccordionItem>
-</Accordion>
-
 <Card title="Ready to Define Your Team Structure?" icon="users">
 Successful transformation requires the right people in the right roles with clear accountability. Our change management experts can help you assess your current team, identify gaps, and develop a customized organizational structure for your Amos implementation.
 
-[Schedule a Team Readiness Assessment](/contact) or [Download our Role Definition Toolkit](/resources/role-definition-toolkit)
+[Schedule a Team Readiness Assessment](/contact)
 </Card>
