--- a/components/TimelineRoadmap.mdx
+++ b/components/TimelineRoadmap.mdx
@@ -343,30 +343,157 @@ import { Card } from '@mintlify/components'
 ## AI Readiness Progression Timeline
 
 <Card title="AI Enablement Roadmap" icon="brain">
-  ```mermaid
-  gantt
-    title AI Readiness Implementation Timeline
-    dateFormat  YYYY-MM-DD
-    section Data Foundation
-    Data Integration     :done, foundation, 2024-01-01, 2024-03-01
-    Data Quality Setup   :done, quality, 2024-02-01, 2024-04-01
-    Governance Framework :active, governance, 2024-03-01, 2024-05-01
-    
-    section Analytics Platform
-    Feature Store Setup  :analytics1, 2024-04-01, 2024-06-01
-    ML Pipeline Development :analytics2, 2024-05-01, 2024-07-01
-    Model Training Infrastructure :analytics3, 2024-06-01, 2024-08-01
-    
-    section AI Applications
-    Operations AI (L1)   :ai1, 2024-07-01, 2024-09-01
-    Finance/IR AI (L2)   :ai2, 2024-08-01, 2024-10-01
-    Investment AI (L3)   :ai3, 2024-09-01, 2024-12-01
-    
-    section Optimization
-    Model Monitoring     :monitor, 2024-10-01, 2024-11-01
-    Performance Tuning   :tune, 2024-11-01, 2024-12-01
-    Scale & Expand       :scale, 2024-12-01, 2025-02-01
-  ```
+  <div style={{ padding: '16px 0' }}>
+    <div style={{
+      display: 'grid',
+      gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))',
+      gap: '16px'
+    }}>
+      {/* Month 1-3: Data Foundation */}
+      <div style={{
+        border: '1px solid #e5e7eb',
+        borderRadius: '8px',
+        padding: '16px',
+        backgroundColor: '#f0fdf4'
+      }}>
+        <div style={{
+          display: 'flex',
+          alignItems: 'center',
+          marginBottom: '12px'
+        }}>
+          <div style={{
+            width: '24px',
+            height: '24px',
+            borderRadius: '50%',
+            backgroundColor: '#059669',
+            color: 'white',
+            display: 'flex',
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: '12px',
+            fontWeight: 'bold',
+            marginRight: '8px'
+          }}>1</div>
+          <span style={{ fontSize: '14px', fontWeight: '600' }}>Months 1-3: Data Foundation</span>
+        </div>
+        <div style={{ fontSize: '13px', lineHeight: '1.4' }}>
+          <ul style={{ margin: '4px 0', paddingLeft: '16px' }}>
+            <li>Data Integration (Month 1-2)</li>
+            <li>Data Quality Setup (Month 2-3)</li>
+            <li>Governance Framework (Month 3)</li>
+          </ul>
+        </div>
+      </div>
+      
+      {/* Month 4-6: Analytics Platform */}
+      <div style={{
+        border: '1px solid #e5e7eb',
+        borderRadius: '8px',
+        padding: '16px',
+        backgroundColor: '#eff6ff'
+      }}>
+        <div style={{
+          display: 'flex',
+          alignItems: 'center',
+          marginBottom: '12px'
+        }}>
+          <div style={{
+            width: '24px',
+            height: '24px',
+            borderRadius: '50%',
+            backgroundColor: '#2563eb',
+            color: 'white',
+            display: 'flex',
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: '12px',
+            fontWeight: 'bold',
+            marginRight: '8px'
+          }}>2</div>
+          <span style={{ fontSize: '14px', fontWeight: '600' }}>Months 4-6: Analytics Platform</span>
+        </div>
+        <div style={{ fontSize: '13px', lineHeight: '1.4' }}>
+          <ul style={{ margin: '4px 0', paddingLeft: '16px' }}>
+            <li>Feature Store Setup (Month 4-5)</li>
+            <li>ML Pipeline Development (Month 5-6)</li>
+            <li>Model Training Infrastructure (Month 6)</li>
+          </ul>
+        </div>
+      </div>
+      
+      {/* Month 7-9: AI Applications */}
+      <div style={{
+        border: '1px solid #e5e7eb',
+        borderRadius: '8px',
+        padding: '16px',
+        backgroundColor: '#faf5ff'
+      }}>
+        <div style={{
+          display: 'flex',
+          alignItems: 'center',
+          marginBottom: '12px'
+        }}>
+          <div style={{
+            width: '24px',
+            height: '24px',
+            borderRadius: '50%',
+            backgroundColor: '#7c3aed',
+            color: 'white',
+            display: 'flex',
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: '12px',
+            fontWeight: 'bold',
+            marginRight: '8px'
+          }}>3</div>
+          <span style={{ fontSize: '14px', fontWeight: '600' }}>Months 7-9: AI Applications</span>
+        </div>
+        <div style={{ fontSize: '13px', lineHeight: '1.4' }}>
+          <ul style={{ margin: '4px 0', paddingLeft: '16px' }}>
+            <li>Operations AI (L1) - Month 7-8</li>
+            <li>Finance/IR AI (L2) - Month 8-9</li>
+            <li>Investment AI (L3) - Month 9</li>
+          </ul>
+        </div>
+      </div>
+      
+      {/* Month 10-12: Optimization */}
+      <div style={{
+        border: '1px solid #e5e7eb',
+        borderRadius: '8px',
+        padding: '16px',
+        backgroundColor: '#fef3c7'
+      }}>
+        <div style={{
+          display: 'flex',
+          alignItems: 'center',
+          marginBottom: '12px'
+        }}>
+          <div style={{
+            width: '24px',
+            height: '24px',
+            borderRadius: '50%',
+            backgroundColor: '#f59e0b',
+            color: 'white',
+            display: 'flex',
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: '12px',
+            fontWeight: 'bold',
+            marginRight: '8px'
+          }}>4</div>
+          <span style={{ fontSize: '14px', fontWeight: '600' }}>Months 10-12: Optimization</span>
+        </div>
+        <div style={{ fontSize: '13px', lineHeight: '1.4' }}>
+          <ul style={{ margin: '4px 0', paddingLeft: '16px' }}>
+            <li>Model Monitoring (Month 10)</li>
+            <li>Performance Tuning (Month 11)</li>
+            <li>Scale & Expand (Month 12+)</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </Card>
 
 ## Change Management Timeline
