--- a/index.mdx
+++ b/index.mdx
@@ -3,63 +3,53 @@ title: "AMOS Data Platform"
 description: "Unified data infrastructure for modern fund operations"
 ---
 
-import { Card, Cards } from 'nextra/components'
+import { Card, CardGroup } from 'nextra/components'
 
 AMOS is an open-source data platform designed specifically for fund operations, providing the unified data infrastructure that modern investment funds need to operate efficiently and make data-driven decisions.
-
-## About This Documentation
-
-This documentation is organized into two complementary sections that reflect our vision of data transformation projects as comprehensive change management initiatives, not just technical implementations:
-
-**Business Documentation**: Strategic guidance, implementation methodologies, and change management frameworks for fund leaders and decision-makers. This section covers the business case, use cases, and proven approaches for successful data transformation.
-
-**Technical Documentation**: API references, integration guides, and technical specifications for developers and technical teams implementing AMOS.
-
-Our approach recognizes that successful data transformation requires both technical excellence and organizational change management. Both our platform and our methodology are open source—we believe in transparency not just in code, but in sharing the proven practices that make data projects successful.
 
 ## Why AMOS?
 
 Investment funds face unique data challenges: fragmented systems, inconsistent definitions, manual processes, and the need for real-time insights across portfolio companies, investors, and market conditions. AMOS solves these challenges by creating a single source of truth for all fund-related data.
 
-<Cards>
-  <Card title="Unified Data Layer" icon="🔗">
+<CardGroup cols={2}>
+  <Card title="Unified Data Layer" icon="link">
     Consolidate data from fund administration, portfolio management, CRM, and market data sources into a single, queryable platform.
   </Card>
   
-  <Card title="Open Source Flexibility" icon="🔓">
+  <Card title="Open Source Flexibility" icon="unlock">
     Deploy on your infrastructure with full control over your data, customizations, and integrations. No vendor lock-in.
   </Card>
   
-  <Card title="Fund-Specific Models" icon="📊">
+  <Card title="Fund-Specific Models" icon="chart-bar">
     Purpose-built data models for fund operations including LP management, portfolio tracking, and performance reporting.
   </Card>
   
-  <Card title="AI-Ready Foundation" icon="🤖">
+  <Card title="AI-Ready Foundation" icon="robot">
     Clean, governed data that enables AI applications for due diligence, portfolio optimization, and operational efficiency.
   </Card>
-</Cards>
+</CardGroup>
 
 ## Get Started
 
 Explore how AMOS can transform your fund operations:
 
-<Cards>
-  <Card title="Executive Overview" icon="👔" href="/fund-leaders">
+<CardGroup cols={2}>
+  <Card title="Executive Overview" icon="user-tie" href="/fund-leaders">
     Understand the business value and strategic benefits of unified data infrastructure for fund operations.
   </Card>
   
-  <Card title="Use Cases" icon="💼" href="/fund-leaders/use-cases">
+  <Card title="Use Cases" icon="briefcase" href="/fund-leaders/use-cases">
     See how different fund types leverage AMOS for operational efficiency and better decision-making.
   </Card>
   
-  <Card title="Implementation Guide" icon="🚀" href="/fund-leaders/implementation">
+  <Card title="Implementation Guide" icon="rocket" href="/fund-leaders/implementation">
     Learn how to plan and execute your AMOS implementation with proven methodologies and best practices.
   </Card>
   
-  <Card title="AI Readiness" icon="🧠" href="/fund-leaders/ai-readiness">
+  <Card title="AI Readiness" icon="brain" href="/fund-leaders/ai-readiness">
     Discover how AMOS creates the data foundation necessary for successful AI initiatives in fund operations.
   </Card>
-</Cards>
+</CardGroup>
 
 ## Key Benefits
 
@@ -91,6 +81,20 @@ AMOS is built on open-source principles that extend beyond just the technical pl
 - **Proven Frameworks**: Access to battle-tested change management and implementation methodologies
 - **Transparent Practices**: Complete documentation of approaches that work in real fund environments
 - **Community Knowledge**: Benefit from shared experiences and best practices across the fund management industry
+
+## About This Documentation
+
+This documentation is organized into two complementary sections that reflect our vision of data transformation projects as comprehensive change management initiatives, not just technical implementations:
+
+<CardGroup cols={2}>
+  <Card title="Business Documentation" icon="briefcase">
+    Strategic guidance, implementation methodologies, and change management frameworks for fund leaders and decision-makers. This section covers the business case, use cases, and proven approaches for successful data transformation.
+  </Card>
+  
+  <Card title="Technical Documentation" icon="cog">
+    API references, integration guides, and technical specifications for developers and technical teams implementing AMOS.
+  </Card>
+</CardGroup>
 
 We believe that successful data transformation requires both excellent technology and proven methodology. By making both open source, we enable funds to build on the collective knowledge of the industry rather than starting from scratch.
 
